force-app/main/default/objects/Shipping_Form__c/Shipping_Form__c.object-meta.xml
<CustomObject>
    <label>Shipping Form</label>
    <nameField>
        <label>Shipping Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>