force-app/main/default/objects/Shipping_Form__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) +  Id</formula>
    <label>Form URL</label>
    <type>Text</type>
</CustomField>