force-app/main/default/objects/Shipping_Form__c/fields/FS_Consignee_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Consignee_Contact_Name__c</fullName>
    <label>Consignee Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>