force-app/main/default/objects/Shipping_Form__c/fields/FS_Consignee_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Consignee_Country__c</fullName>
    <label>Consignee Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>