force-app/main/default/objects/Shipping_Form__c/fields/FS_Consignee_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Consignee_Email__c</fullName>
    <label>Consignee Email</label>
    <type>Email</type>
</CustomField>