force-app/main/default/objects/Shipping_Form__c/fields/FS_Consignee_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Consignee_Postal_Code__c</fullName>
    <label>Consignee Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>