force-app/main/default/objects/Shipping_Form__c/fields/FS_Consignee_Street_address__c.field-meta.xml
<CustomField>
    <fullName>FS_Consignee_Street_address__c</fullName>
    <label>Consignee  Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>