force-app/main/default/objects/Shipping_Form__c/fields/FS_date_ready__c.field-meta.xml
<CustomField>
    <fullName>FS_date_ready__c</fullName>
    <label>Date Ready</label>
    <type>DateTime</type>
</CustomField>