force-app/main/default/objects/Shipping_Form__c/fields/FS_Delivery_Deadline__c.field-meta.xml
<CustomField>
    <fullName>FS_Delivery_Deadline__c</fullName>
    <label>Delivery Deadline</label>
    <type>Date</type>
</CustomField>