force-app/main/default/objects/Shipping_Form__c/fields/FS_IncoTerms__c.field-meta.xml
<CustomField>
    <fullName>FS_IncoTerms__c</fullName>
    <label>IncoTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>