force-app/main/default/objects/Shipping_Form__c/fields/FS_Number_of_dispensers_ready__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_dispensers_ready__c</fullName>
    <label>Number of dispensers ready</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>