force-app/main/default/objects/Shipping_Form__c/fields/FS_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>