force-app/main/default/objects/Shipping_Form__c/fields/FS_Shipper_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipper_Address__c</fullName>
    <label>Shipper Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>