force-app/main/default/objects/Shipping_Form__c/fields/FS_Shipper_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipper_City__c</fullName>
    <label>Shipper City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>