force-app/main/default/objects/Shipping_Form__c/fields/FS_Shipper_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipper_Phone__c</fullName>
    <inlineHelpText>1.  US Phone: Enter 10 digits number without any spaces/characters (e.g. 1234567890)

2.  International Phone: You must enter a â€œ+â€� sign before the number. Then enter the country code and the phone number. Do not use spaces. (e.g. +441234567890).</inlineHelpText>
    <label>Shipper Phone</label>
    <type>Phone</type>
</CustomField>