force-app/main/default/objects/Shipping_Form__c/fields/FS_Shipper_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipper_Postal_Code__c</fullName>
    <label>Shipper Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>