force-app/main/default/objects/Shipping_Form__c/fields/FS_Shipper_State_Province__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipper_State_Province__c</fullName>
    <label>Shipper State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>