force-app/main/default/objects/Shipping_Form__c/fields/Shipper_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Notes__c</fullName>
    <label>Shipper Notes</label>
    <type>TextArea</type>
</CustomField>