force-app/main/default/objects/Shipping_Form__c/fields/Unique_Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Shipping_Name__c</fullName>
    <label>Shipping Form Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>