force-app/main/default/objects/Shipping_Form__c/validationRules/IsConsigneePhoneValid.validationRule-meta.xml
<ValidationRule>
    <fullName>IsConsigneePhoneValid</fullName>
    <active>true</active>
    <description>It checks if the &#39;Consignee Phone&#39; field is in the standard format or the international format.</description>
    <errorConditionFormula>IF (FS_Consignee_Phone__c  == &quot;&quot; , 
	NULL,
	IF (  NOT(BEGINS(FS_Consignee_Phone__c , &quot;+&quot;) ),
	IF ((REGEX(FS_Consignee_Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)),NULL,TRUE),
	IF ( (LEN(FS_Consignee_Phone__c )&lt;10 || LEN(FS_Consignee_Phone__c )&gt;15),
	TRUE,
	IF ( ISNUMBER(RIGHT(FS_Consignee_Phone__c ,   LEN(FS_Consignee_Phone__c )-1  )),
	NULL,
	TRUE
	)
	)
	)
	)</errorConditionFormula>
    <errorMessage>Please input a correctly formatted Consignee Phone Number.</errorMessage>
</ValidationRule>