force-app/main/default/objects/Shipping_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_PO_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>